--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,11 @@
-<div class="container"><h1>This is a test</h1>
+<div class="container">
+  <div class="row">
+    <div class="col-xs-12">
+      <h3>I'm in the AppComponent!</h3>
+      <hr>
+     <!--<app-servers></app-servers>-->
+     <!--<div app-servers></div>-->
+     <div class="app-servers"></div>
+    </div>
+  </div>
 </div>
